--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: "Install dependencies"
         run: npm ci
       - name: "Build App"
-        run: npm run build
+        run: npm run build-github-pages
       - name: "Deploy React App to GitHub Pages"
         uses: JamesIves/github-pages-deploy-action@v4.4.3
         with:
